<resources>
    <string name="app_name">MapsApp</string>
    <string-array name="city_names">
        <item>Select item</item>
        <item>Clear</item>
        <item>New York</item>
        <item>London</item>
        <item>Sydney</item>
        <item>Berlin</item>
        <item>Moscow</item>
        <item>Shanghai</item>
        <item>Tokyo</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_for_locations">Type in the Latitude and Longitude of two locations and find out the distance between them</string>
    <string name="first_place_label">First Place</string>
    <string name="hint_for_city_input">City, Country</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="empty_string" />
    <string name="second_place_label">Second Place</string>
    <string name="start_map_label">Start Map</string>
    <string name="ok_dialog_distance">OK</string>
    <string name="wrong_number_format_for_lat_lng">Please type valid latitude and longitude values. Example: latitude = 0.0 and longitude = 0.0</string>
    <string name="dialog_message_part_1">The Distance between </string>
    <string name="dialog_message_and">and</string>
    <string name="dialog_message_is">is</string>
    <string name="show_my_location_label">My Location</string>
    <string name="distance_dialog_label">Distance</string>
    <string name="no_permission_for_location_dialog_label">No permissions</string>
    <string name="no_permission_for_location_dialog_message">Permissions for location are denied but permission is needed for this action</string>
    <string name="current_location_dialog_label">Current location</string>
    <string name="current_location_latitude_dialog_message">Your current location latitude is</string>
    <string name="current_location_longitude_dialog_message">and longitude is</string>
    <string name="no_current_location_found_dialog_label">No current location</string>
    <string name="no_current_location_found_dialog_message">No current location is found. Please check your permissions.</string>
    <string name="your_location">Your location</string>
    <string name="choose_distance_dialog_title">Which distance you want to kow?\nChoose distance between</string>
    <string name="first_and_second_place">First and second place</string>
    <string name="first_and_my_place">First and my place</string>
    <string name="second_and_my_place">Second and my place</string>
    <string name="distance_dialog_title">Distances</string>
    <string name="show_map_dialog">SHOW MAP</string>
    <string name="toast_same_input">You have that city already place pick another one</string>
    <string name="toast_no_free_input">There is no free input field</string>
    <string name="dialog_wrong_input">Please type in valid digits.\nLatitude between -90.0 and 90.00.\nLongitude between -180.0 and 180.0</string>
    <string name="dialog_wrong_input_label">Wrong input</string>
</resources>