<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".LocationActivity">

    <TextView
        android:id="@+id/titelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3700BCD4"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_for_locations"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/firstLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3700BCD4"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/firstPlaceLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_place_label" />

        <EditText
            android:id="@+id/firstPlaceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_for_city_input"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/LongLatLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstPlaceLatitudeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/latitude_label" />

            <TextView
                android:id="@+id/firstPlaceLongitudeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/longitude_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LongLatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstPlaceLatitudeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/empty_string"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/firstPlaceLongitudeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3700BCD4"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/secondPlaceLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_place_label" />

        <EditText
            android:id="@+id/secondPlaceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_for_city_input"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/LongLatLabelSecondPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secondPlaceLatitudeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/latitude_label" />

            <TextView
                android:id="@+id/secondPlaceLongitudeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/longitude_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LongLatInputSecondPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/secondPlaceLatitudeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/empty_string"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/secondPlaceLongitudeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/startMapButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/start_map_label" />

        <Button
            android:id="@+id/showMyLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/show_my_location_label" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>